Versão do kafka alterada pra mesma do curso